second commit= second change

--- a/gitfile1.html
+++ b/gitfile1.html
@@ -393,6 +393,7 @@ code chunk to prevent printing of the R code that generated the
 plot.</p>
 <p>#Github setup test</p>
 <p>My first github file</p>
+<p>second change</p>
 </div>
 
 
