--- a/gitfile1.html
+++ b/gitfile1.html
@@ -394,6 +394,8 @@ plot.</p>
 <p>#Github setup test</p>
 <p>My first github file</p>
 <p>second change</p>
+<p>third change</p>
+<p>fourth change</p>
 </div>
 
 
